<resources>

    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="delete_items">Delete items</string>
    <string name="add_item">Add item</string>
    <string name="select_items">Select items</string>
    <string name="title_activity_select_questions">Select Questions</string>
    <string name="questions">Questions</string>
    <string name="questions_settings_short_description">Add, remove and edit questions</string>
    <string name="clients">Clients</string>
    <string name="clients_settings_short_description">Add, remove and edit clients</string>
    <string name="report_templates">Report templates</string>
    <string name="report_templates_settings_short_description">Add, remove and edit report templates</string>
    <string name="reload_database">Reload database</string>
    <string name="reload_database_successfull">Database reloaded successfully</string>
     <string name="reload_database_short_description">Clears and reloads example data into the app</string>
    <string name="activity_crud_questions_title">Questions</string>
    <string name="activity_crud_clients_title">Clients</string>
    <string name="activity_crud_report_templates_title">Report Templates</string>
    <string name="client_name_hint">Client or Business name</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="address_hint">Address</string>
    <string name="contact_name_hint">Contact name</string>

    <!-- Validation error messages for EditText -->
    <string name="editText_validation_error_empty_field">The field cannot be empty.</string>
    <string name="editText_validation_error_numbers_only">Only numbers are allowed on this field.</string>
    <string name="editText_validation_error_numbers_and_spaces_only">Only numbers and spaces are allowed on this field</string>
    <string name="editText_validation_error_alpha_only">Only letters and spaces are allowed on this field</string>
    <string name="editText_validation_error_pipe_char_not_allowed">Pipe character (&quot;|&quot;) not allowed</string>
    <string name="editText_validation_error_char_not_allowed">The following characters are not allowed: (&quot;|&quot;)</string>
    <string name="editText_validation_error_in_one_or_more">At least one field has validation errors. Cannot continue</string>

    <!-- Database related messages -->
    <string name="database_error_storing_data">Error storing data in the database</string>
    <string name="database_success_storing_data">Data stored successfully</string>
    <string name="database_success_updating_data">Data updated successfully</string>
    <string name="database_error_updating_data">Error updating data in the database</string>
    <string name="database_success_deleting_data">Data deleted successfully</string>
    <string name="app_name">Geo Salesman</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_geo_salesman">GeoSalesman</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Main menu -->
    <string name="new_report">New Report</string>
    <string name="new_report_short_description">Create a new report</string>
    <string name="stored_report">Stored Reports</string>
    <string name="stored_report_short_description">Show not send reports</string>
    <string name="send_reports">Send Reports</string>
    <string name="send_reports_short_description">Use email to send reports</string>
    <string name="settings">Settings</string>
    <string name="settings_short_description">Settings</string>
    <string name="title_activity_show_questions">Show Questions</string>
    <!-- Questions menu -->
    <string name="activity_show_questions_add_new_question">Add new question</string>
    <string name="no_questions_found">No questions found</string>
    <string name="tap_question_menu_to_add">Use the menu to add one</string>
    <string name="title_activity_add_new_question">Add New Question</string>

    <!-- Add new Client activity -->
    <string name="activity_add_new_client_update_title">Update Client</string>
    <string name="activity_add_new_client_add_new_title_activity">Add new client</string>
    <string name="no_clients_found">No clients found</string>
    <string name="tap_client_menu_to_add">Tap client menu to add one</string>
    <!-- Add new Question activity -->
    <string name="activity_add_new_question_update_title">Update question</string>
    <string name="activity_add_new_question_add_new_title_activity">Add new question</string>
    <string name="activity_add_new_question_spinner_question_type_prompt">Question type</string>
    <string name="activity_add_new_question_spinner_option_default_option">Question type</string>
    <string name="activity_add_new_question_spinner_option_yes_no">Yes/No</string>
    <string name="activity_add_new_question_spinner_multiple_choice_answer">Multiple choice answer</string>
    <string name="activity_add_new_question_spinner_option_open">Open</string>
    <string name="activity_add_new_question_spinner_option_scale">Scale</string>

    <string-array name="question_type_options">
        <item>@string/activity_add_new_question_spinner_option_default_option</item>
        <item>@string/activity_add_new_question_spinner_option_yes_no</item>
        <item>@string/activity_add_new_question_spinner_multiple_choice_answer</item>
        <item>@string/activity_add_new_question_spinner_option_open</item>
        <item>@string/activity_add_new_question_spinner_option_scale</item>
    </string-array>

    <string name="spinner_question_error_no_option_chosen">Please choose a question type</string>
    <string name="activity_add_new_question_type_question_title_hint">Question Title</string>
    <string name="activity_add_new_question_type_question_description_hint">Question Description</string>
    <string name="activity_add_new_question_type_your_question_hint">Question</string>
    <!-- Range Selection Dialog -->
    <string name="activity_add_new_question_scale_selection_dialog_title">Select Range</string>
    <string name="activity_add_new_question_scale_selection_dialog_message">Type minimum and maximun values for this range</string>
    <string name="activity_add_new_question_maximum_value_hint">Maximum Value</string>
    <string name="activity_add_new_question_minimum_value_hint">Minimum Value</string>
    <!-- Yes/No answer options -->
    <string name="activity_add_new_question_yes_answer_option">Yes</string>
    <string name="activity_add_new_question_no_answer_option">No</string>
    <string name="title_activity_question">Question</string>
    <string name="title_activity_crudobject">CRUDObject</string>
    <string name="title_activity_add_new_client">Add New Client</string>
    <string name="title_activity_add_new_report_template">Add New Report Template</string>

    <!-- Report Template -->
    <string name="no_report_templates_found">No report templates found</string>
    <string name="tap_report_templates_menu_to_add">Tap menu to add a new report template.</string>
    <string name="add_or_remove_questions">Add or remove questions</string>
    <string name="report_template_name_hint">Template Name</string>
    <string name="report_template_description_hint">Template description</string>
    <string name="report_template_number_of_questions_currently_added">Questions already added to this report:</string>
    <string name="activity_add_new_report_template_update_title">Update Report Template</string>
    <string name="title_activity_add_new_report">Add New Report</string>

    <!-- Report -->
    <string name="creation_date">Creation Date</string>
    <string name="now">Now</string>
    <string name="set_location">Set location</string>
    <string name="type_your_comments">Type your comments</string>
    <string name="answer_questions">Answer questions</string>
    <string name="client">Tap to set the client</string>
    <string name="select_client">Select client</string>
    <string name="set_report_template">Tap to set the report template</string>
    <string name="title_activity_answer_questions">Answer Questions</string>
    <string name="write_your_answer_here">Write your answer here</string>
    <string name="select_report_template">Select report template</string>
    <string name="send">Send</string>
    <string name="tap_to_set_location">Tap to set location</string>
    <string name="report_details">
<![CDATA[<p>
		<b>Report Details <br>
		<b>Report comments:  </b>$report_comments<br>
		<b>Client:  </b>$report_client<br>
		<b>Report template name and description: </b>$report_template_name_and_description<br>
        </p>
        ]]>
    </string>
    <string name="question_report_answer">
<![CDATA[<p>
        <b>Question Title: </b>$question_title<br>
        <b>Question Description: </b>$question_description<br>
        <b>Question: </b>$question<br>
        <b>Answer: </b>$answer
        </p>]]>
    </string>
    <string name="title_activity_location">Location</string>

</resources>