<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextComments"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_comments"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editTextClient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client" />

        <EditText
            android:id="@+id/editTextReportTemplateName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_report_template" />

        <Button
            android:id="@+id/buttonAnswerQuestions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/answer_questions" />

        <Button
            android:id="@+id/buttonSetLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/set_location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSendReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/send" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>