<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/text_view_inside_linear_layout"
        android:text="@string/activity_add_new_question_scale_selection_dialog_message" />

    <EditText
        android:id="@+id/activity_add_new_question_editText_minimum_value"
        style="@style/text_view_inside_linear_layout"
        android:hint="@string/activity_add_new_question_minimum_value_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/activity_add_new_question_editText_maximum_value"
        style="@style/text_view_inside_linear_layout"
        android:hint="@string/activity_add_new_question_maximum_value_hint"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/activity_add_new_question_range_selection_button_ok"
            style="@style/button_inside_linear_layout"
            android:text="@string/ok" />

        <Button
            android:id="@+id/activity_add_new_question_range_selection_button_cancel"
            style="@style/button_inside_linear_layout"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>