<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/report_template_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:hint="@string/report_template_name_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/report_template_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_template_name"
        android:hint="@string/report_template_description_hint" />

    <TextView
        android:id="@+id/report_template_number_of_questions_added"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/report_template_description" />

    <Button
        android:id="@+id/report_template_questions_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/report_template_number_of_questions_added"
        android:text="@string/add_or_remove_questions" />

    <LinearLayout
        android:id="@+id/listview_floating_buttons_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" 
        android:layout_below="@+id/report_template_questions_button">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>